# Calculator

./: CMakeLists.txt  Calculator - QT.sln  Calculator.pro  README.md
Calculator - QT/: .qmake.stash  Calculator - QT.pri  Calculator - QT.pro  Calculator - QT.vcxproj  Calculator - QT.vcxproj.filters  Cursors.cpp  Cursors.h  Interface.cpp  Interface.h  MainWindow.cpp  MainWindow.h  MathOperation.cpp  MathOperation.h  NewWindow.cpp  main.cpp
resource/: StyleSheet.css  resource.qrc
src/: Interface.cpp  Interface.h  MainWindow.h  Mainwindow.cpp  MathOperation.cpp  MathOperation.h  NewWindow.cpp  NewWindow.h  main.cpp
